# EmbeddedSystemsProjects

./: README.md  gitignore.txt
adc_project/: CMakeLists.txt  main.c  main.h
adc_project/config_openocd/: stm32f103c8_blue_pill.cfg
adc_project/scheme/: scheme.fzz
dac_project/: CMakeLists.txt  main.c  main.h
dac_project/config_openocd/: stm32f103c8_blue_pill.cfg
dac_project/libraries/main_library/: stm32f1xx.h
dac_project/scheme/: scheme.fzz
gpio_project/: CMakeLists.txt  main.c
gpio_project/scheme/: scheme.fzz
i2c_project/: CMakeLists.txt  main.c  main.h
i2c_project/scheme/: scheme.fzz
spi_project/: CMakeLists.txt  main.c  main.h
spi_project/libraries/main_library/: stm32f103xb.h
spi_project/scheme/: scheme.fzz
uart_project/: CMakeLists.txt  main.c  main.h
uart_project/scheme/: scheme.fzz
